Feat: New Endpoints